# plato

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindWDK.cmake
extlibs/code_virtualizer/: CMakeLists.txt
extlibs/code_virtualizer/include/: StealthCodeArea.h  VirtualizerSDK_CustomVMs.h  VirtualizerSDK_CustomVMs_BorlandC_inline.h  VirtualizerSDK_CustomVMs_GNU_inline.h  VirtualizerSDK_CustomVMs_ICL_inline.h  VirtualizerSDK_CustomVMs_LCC_inline.h  VirtualizerSDK_CustomVMs_VC_inline.h
source/: CMakeLists.txt  main.cpp
source/ksocket/: CMakeLists.txt
source/utils/: CMakeLists.txt  memory.cpp  memory.h
